@@ -116,6 +116,12 @@
 			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="40%" width="8%" layer="3">
 				<drawimage name="foldericon" imagetype="icon" path="ico_recfolder" x="0" width="{areawidth}" height="{areaheight}" valign="center" align="center"/>
 			</area>
+			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="45%" width="5%" layer="3">
+				<drawtext x="0%" valign="center" align="right" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numrecordingsfolder} " />
+			</area>
+			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)++gt({newrecordingsfolder}, 0)" x="50%" width="5%" layer="3">
+				<drawtext x="0%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="/ {newrecordingsfolder} {tr(new)}" />
+			</area>
 			<areascroll condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="54%" width="40%" layer="4">
 				<drawtext x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
 			</areascroll>
@@ -200,6 +206,12 @@
 			</areascroll>
 			<area condition="{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="40%" width="8%" layer="3">
 				<drawimage name="foldericon" imagetype="icon" path="ico_recfolder" x="0" width="{areawidth}" height="{areaheight}" valign="center" align="center"/>
+			</area>
+			<area condition="{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="45%" width="5%" layer="3">
+				<drawtext x="0%" valign="center" align="right" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numrecordingsfolder} " />
+			</area>
+			<area condition="{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)++gt({newrecordingsfolder}, 0)" x="50%" width="5%" layer="3">
+				<drawtext x="0%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="/ {newrecordingsfolder} {tr(new)}" />
 			</area>
 			<areascroll condition="{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="58%" width="34%" layer="4">
 				<drawtext x="2%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
